# sp-exam-assignment

./: .gitignore  CMakeLists.txt  benchmark.cmake  doctest.cmake  main.cpp  matplot.cmake
benchmarking/: Benchmarks.cpp  CMakeLists.txt  plot_results.py
estimation/: CMakeLists.txt  Estimate.cpp  main.cpp
src/: Agent.cpp  Agent.h  CMakeLists.txt  FileWriter.cpp  FileWriter.h  ParallelRunner.cpp  ParallelRunner.h  Reaction.cpp  Reaction.h  ReactionCompounds.cpp  ReactionCompounds.h  Simulation.cpp  Simulation.h  SymbolTable.h  SymbolTable.hpp  ThreadPool.hpp
src/Examples/: CMakeLists.txt  Circadian.cpp  Seihr.cpp  Simple.cpp
src/Plotting/: CMakeLists.txt  LineData.cpp  LineData.h  Point.cpp  Point.h  ReactionDrawer.cpp  ReactionDrawer.h  TrajectoryDrawer.cpp  TrajectoryDrawer.h  sciplot.cmake
tests/: CMakeLists.txt  ReactionTests.cpp  SymbolTableTests.cpp
